src/objects/Trial__c.object
<CustomObject>
    <description>Tracks the trials that the user have consumed during</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>Related Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Trials</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Ignore__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicated if this trial should be ignored which allows a contact to have another trial for the same product.</description>
        <label>Ignore</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Product_Rate_Plan_Information__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rate Plan Information</label>
        <referenceTo>Product_Rate_Plan_Information__c</referenceTo>
        <relationshipName>Trials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Product__c</fullName>
        <formula>Product_Rate_Plan_Information__r.Related_Product_Information__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trial_Date__c</fullName>
        <description>Beginning of trial date</description>
        <label>Trial Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>IEC Trial</label>
    <nameField>
        <displayFormat>T-{000000}</displayFormat>
        <label>Trial Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IEC Trials</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>